7901731: jtreg needs to use --add-modules for non-default modules